--- a/styles/global.css
+++ b/styles/global.css
@@ -1,11 +1,10 @@
 body {
-  /* min-height: 100%; */
   min-width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: var(--margin);
-  font-family: 'Raleway', monospace;
+  padding: var(--margin) calc(var(--margin) / 2);
+  font-family: 'Raleway', sans-serif;
   font-weight: 400;
   line-height: 24px;
   letter-spacing: 0;
@@ -22,6 +21,16 @@ body {
   background-color: var(--color-font-secondary);
   overflow-x: hidden;
 }
+@media (width<= 886px) {
+  body {
+    overflow-x: none;
+  }
+}
+@media (width < 640px) {
+  body {
+    padding: var(--margin);
+  }
+}
 
 .container {
   display: flex;
@@ -34,15 +43,62 @@ body {
   width: 1120px;
   height: 860px;
 }
+@media (width<= 1279px) {
+  .container {
+    min-width: 822px;
+    width: 1120px;
+  }
+}
+@media (width >= 1024px) {
+  .container {
+    max-width: 1120px;
+    width: 960px;
+  }
+}
+@media (width<= 1023px) {
+  .container {
+    height: 100%;
+  }
+}
+@media (width< 886px) {
+  .container {
+    width: 838px;
+    min-width: 720px;
+  }
+}
+@media (width< 768px) {
+  .container {
+    min-width: 608px;
+    max-width: 720px;
+  }
+}
+@media (width<= 640px) {
+  .container {
+    min-width: 343px;
+  }
+}
 .full-width-padd {
   width: 100%;
   padding: var(--margin);
 }
+@media (width>= 1024px) {
+  .full-width-padd {
+    padding: 32px;
+  }
+}
+
 .icon {
   width: 24px;
   height: 24px;
   cursor: pointer;
 }
+@media (width<= 640px) {
+  .icon {
+    width: 16px;
+    height: 16px;
+  }
+}
+
 .slider__list-temperature::after,
 .temperature::after {
   content: '°';
@@ -53,7 +109,7 @@ body {
   height: 1px;
   padding: 0;
   margin: -1px;
-  overflow: hidden;
+  overflow: hidden !important;
   clip: rect(0, 0, 0, 0);
   white-space: nowrap;
   border-width: 0;
@@ -62,49 +118,4 @@ body {
   color: var(--color-font-main);
   text-decoration-color: var(--color-font-main);
   cursor: default;
-}
-@media (max-width: 1279px) {
-  .container {
-    min-width: 822px;
-    width: 1120px;
-  }
-}
-@media (min-width: 1024px) {
-  .container {
-    max-width: 1120px;
-    min-width: 960px;
-  }
-  .full-width-padd {
-    padding: 32px;
-  }
-}
-@media (max-width: 1023px) {
-  .container {
-    height: 100%;
-  }
-}
-
-@media (max-width: 886px) {
-  body {
-    overflow-x: none;
-  }
-  .container {
-    width: 838px;
-    min-width: 720px;
-  }
-}
-@media (max-width: 768px) {
-  .container {
-    min-width: 608px;
-    max-width: 720px;
-  }
-}
-@media (max-width: 640px) {
-  .container {
-    min-width: 343px;
-  }
-  .icon {
-    width: 16px;
-    height: 16px;
-  }
 }
