--- a/styles/weatherForecast/weatherForecast.css
+++ b/styles/weatherForecast/weatherForecast.css
@@ -1,7 +1,37 @@
 .weather__forecast {
   display: grid;
   grid-area: sidebar;
-  height: 192px;
+  /* height: 192px; */
+}
+@media (width >= 1024px) {
+  .weather__forecast {
+    grid-template-rows: 32px 64px;
+    gap: 32px;
+  }
+}
+@media (width <= 1023px) {
+  .weather__forecast {
+    grid-template-rows: 32px 64px;
+    gap: 24px;
+  }
+}
+@media (width < 768px) {
+  .weather__forecast {
+    grid-template-rows: 32px 136px;
+    gap: 24px;
+  }
+}
+@media (width <= 640px) {
+  .weather__forecast {
+    grid-template-rows: 22px 46px;
+    gap: 16px;
+  }
+}
+@media (width <= 375px) {
+  .weather__forecast {
+    grid-template-rows: 22px 104px;
+    gap: 16px;
+  }
 }
 .weather__forecast-header {
   display: flex;
@@ -9,6 +39,16 @@
   gap: var(--margin);
   font-weight: 700;
   align-items: center;
+}
+@media (width <= 1023px) {
+  .weather__forecast-header {
+    height: 32px;
+  }
+}
+@media (width <= 640px) {
+  .weather__forecast-header {
+    height: 22px;
+  }
 }
 .weather__forecast-header-title {
   font-size: var(--font-size-xl);
@@ -26,6 +66,28 @@
   text-decoration-thickness: 2px;
   text-underline-offset: 7px;
 }
+@media (width >= 1024px) {
+  .weather__forecast-header-button {
+    margin-top: 8px;
+  }
+}
+@media (width <= 1023px) {
+  .weather__forecast-header-button {
+    margin-top: 8px;
+  }
+}
+@media (width <= 640px) {
+  .weather__forecast-header-button {
+    margin-top: 0;
+  }
+}
+@media (width <= 375px) {
+  .weather__forecast-header-button {
+    height: 24px;
+    text-align: center;
+  }
+}
+
 .weather__forecast-header-button:hover {
   text-decoration-color: inherit;
 }
@@ -34,52 +96,4 @@
 }
 .weather__forecast-header-button:focus-visible:not(:has(.active-button:focus-visible)) {
   outline: 2px var(--color-accesability) solid;
-}
-@media (min-width: 1024px) {
-  .weather__forecast {
-    margin-top: 37px;
-    height: 162px;
-  }
-  .weather__forecast-header-button {
-    margin-top: 8px;
-  }
-}
-@media (max-width: 1023px) {
-  .weather__forecast {
-    height: 146px;
-  }
-  .weather__forecast-header-button {
-    margin-top: 8px;
-  }
-  .weather__forecast-header {
-    height: 32px;
-  }
-}
-@media (max-width: 768px) {
-  .weather__forecast {
-    height: 231px;
-    padding: 0;
-    gap: 0;
-  }
-}
-@media (max-width: 640px) {
-  .weather__forecast {
-    height: 116px;
-  }
-  .weather__forecast-header {
-    height: 22px;
-  }
-  .weather__forecast-header-button {
-    margin-top: 0;
-  }
-}
-@media (max-width: 375px) {
-  .weather__forecast {
-    height: 174px;
-  }
-
-  .weather__forecast-header-button {
-    height: 24px;
-    text-align: center;
-  }
 }
