--- a/styles/weatherToday/weatherToday.css
+++ b/styles/weatherToday/weatherToday.css
@@ -6,18 +6,110 @@
   text-align: center;
   font-size: var(--font-size-x);
   height: 408px;
-  gap: 48px;
   padding: 4px 8px 8px;
 }
+@media (width>= 1280px) {
+  .weather__today {
+    width: 534px;
+    gap: 64px;
+  }
+}
+@media (width>= 1024px) {
+  .weather__today {
+    height: 408px;
+    gap: 48px;
+    padding: 8px;
+  }
+}
+@media (width <= 1023px) {
+  .weather__today {
+    height: 306px;
+    gap: 24px;
+    padding: 4px 8px;
+  }
+}
+@media (width < 886px) {
+  .weather__today {
+    padding: 0 8px;
+  }
+}
+@media (width < 768px) {
+  .weather__today {
+    padding: 0 8px;
+  }
+}
+@media (width < 640px) {
+  .weather__today {
+    height: 184px;
+    gap: 14px;
+    padding: 0px 8px;
+  }
+}
+@media (width <= 375px) {
+  .weather__today {
+    line-height: 16px;
+  }
+}
+
 .weather__today-place {
   display: flex;
   flex-direction: column;
-  gap: 11px;
+}
+@media (width >= 1280px) {
+  .weather__today-place {
+    height: 96px;
+    gap: 8px;
+    line-height: 24px;
+  }
+}
+@media (width < 1280px) {
+  .weather__today-place {
+    height: 128px;
+  }
+}
+
+@media (width >= 1024px) {
+  .weather__today-place {
+    gap: 8px;
+  }
+}
+@media (width < 1024px) {
+  .weather__today-place {
+    height: 92px;
+    gap: 8px;
+  }
+}
+@media (width < 886px) {
+  .weather__today-place {
+    gap: 6px;
+  }
+}
+@media (width < 640px) {
+  .weather__today-place {
+    height: 60px;
+    line-height: 16px;
+    gap: 4px;
+  }
 }
 
 .weather__today-title {
   font-weight: 700;
   font-size: var(--font-size-xl);
+}
+@media (width>= 1024px) {
+  .weather__today-title {
+    line-height: 32px;
+  }
+}
+@media (width < 886px) {
+  .weather__today-title {
+    line-height: 32px;
+  }
+}
+@media (width < 640px) {
+  .weather__today-title {
+    line-height: 20px;
+  }
 }
 
 .weather__today-temperature-wrapp {
@@ -25,12 +117,39 @@
   justify-content: center;
   align-items: center;
 }
+
+@media (width>= 1024px) {
+  .weather__today-temperature-wrapp {
+    line-height: 112px;
+  }
+}
+@media (width < 886px) {
+  .weather__today-temperature-wrapp {
+    line-height: 112px;
+  }
+}
+@media (width < 640px) {
+  .weather__today-temperature-wrapp {
+    line-height: 56px;
+  }
+}
+
 .weather__today-temperature {
   --size: 112px;
   display: flex;
   text-align: center;
   font-weight: 700;
   font-size: var(--size);
+}
+@media (width <= 640px) {
+  .weather__today-temperature {
+    --size: 56px;
+  }
+}
+@media (width <= 375px) {
+  .weather__today-temperature {
+    --size: 56px;
+  }
 }
 
 .weather__today-info {
@@ -41,119 +160,26 @@
 .weather__today-info span {
   margin-left: calc(var(--margin) / 4);
 }
-@media (min-width: 1279px) {
-  .weather__today {
-    width: 534px;
-  }
-  .weather__today-temperature-wrapp {
-    height: 112px;
-  }
-}
-@media (max-width: 1279px) {
-  .weather__today-place {
-    height: 128px;
-    /* gap: 9px; */
-  }
-  /* /--------- */
-  /* .weather__today-title {
-    line-height: 32px;
-  }
-  .weather__today {
-    line-height: 24px;
-  }
-  .weather__today-temperature-wrapp {
-    line-height: 112px;
-  } */
-}
-@media (min-width: 1024px) {
-  .weather__today {
-    height: 408px;
-    gap: 48px;
-    padding: 8px;
-    line-height: 24px;
-  }
-  .weather__today-place {
-    height: 128px;
-    gap: 8px;
-  }
+@media (width>= 1024px) {
   .weather__today-sence {
     height: 56px;
     line-height: 29px;
   }
-  .weather__today-temperature-wrapp {
-    line-height: 112px;
-  }
-  .weather__today-title {
-    line-height: 32px;
-  }
 }
-@media (min-width: 1280px) {
-  .weather__today {
-    gap: 64px;
-  }
-}
-@media (max-width: 1023px) {
-  .weather__today-place {
-    height: 92px;
-    gap: 8px;
-  }
-  .weather__today {
-    height: 306px;
-    gap: 24px;
-    padding: 4px 8px;
-  }
 
+@media (width <= 1023px) {
   .weather__today-sence {
     height: 54px;
   }
 }
-@media (max-width: 886px) {
-  .weather__today {
-    line-height: 24px;
-    padding: 2px 8px;
-  }
-  .weather__today-temperature-wrapp {
-    line-height: 112px;
-  }
-  .weather__today-title {
-    line-height: 32px;
-  }
-  .weather__today-place {
-    gap: 6px;
-  }
+@media (width <= 886px) {
   .weather__today-sence {
     line-height: 27px;
   }
 }
 
-@media (max-width: 640px) {
-  .weather__today-temperature {
-    --size: 56px;
-  }
-  .weather__today-title {
-    line-height: 20px;
-  }
-  .weather__today {
-    height: 184px;
-    gap: 14px;
-    padding: 0px 8px;
-    line-height: 16px;
-  }
-  .weather__today-temperature-wrapp {
-    line-height: 52px;
-  }
-  .weather__today-place {
-    gap: 4px;
-  }
+@media (width <= 640px) {
   .weather__today-sence {
     line-height: 16px;
-  }
-}
-@media (max-width: 375px) {
-  .weather__today-temperature {
-    --size: 56px;
-  }
-  .weather__today {
-    height: 184px;
   }
 }
