--- a/styles/footer/footer.css
+++ b/styles/footer/footer.css
@@ -7,11 +7,13 @@
   font-weight: 400;
   font-size: var(--font-size-m);
   color: var(--color-font);
+  height: 84px;
 }
 
-@media (width < 640px) {
+@media (width <= 640px) {
   .footer {
-    line-height: 16px;
+    height: 48px;
+    padding: 10px !important;
   }
 }
 
