--- a/styles/slider/slider.css
+++ b/styles/slider/slider.css
@@ -19,20 +19,34 @@
   min-width: 56px;
   height: 48px;
   background: var(--button-bg);
-  opacity: 0.5;
-  border-radius: var(--radius);
-  line-height: var(--font-size-x);
-  cursor: pointer;
-  color: rgba(84, 84, 84, 1);
-  transition: opacity 0.3s ease;
 
-  &:hover {
-    opacity: 1;
+  border-radius: var(--radius);
+
+  cursor: pointer;
+  color: rgba(245, 244, 244, 0.4);
+  transition: opacity 0.3s ease;
+}
+.slider__button-left,
+.slider__button-right {
+  --size-icon: 24px;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  width: var(--size-icon);
+  height: var(--size-icon);
+}
+@media (width <= 640px) {
+  .slider__button-left,
+  .slider__button-right {
+    --size-icon: 16px;
   }
+}
+.slider__button-right {
+  transform: translate(-50%, -50%) rotate(180deg);
 }
 .slider__button:disabled {
   pointer-events: none;
   cursor: not-allowed;
+  opacity: 0.5;
 }
 @media (width <= 640px) {
   .slider__button {
@@ -67,9 +81,6 @@
   }
 }
 
-.slider__button:last-child .icon-slider {
-  transform: translate(-50%, -50%) rotate(180deg);
-}
 .slider__list {
   display: flex;
   justify-content: space-between;
@@ -89,7 +100,7 @@
     black calc(100% 100% - 18px),
     transparent calc(100%)
   );
-  gap: calc(var(--margin) / 2);
+  gap: 16px;
   margin: 0 32px;
 }
 @media (width <= 1279px) {
@@ -98,6 +109,9 @@
   }
 }
 @media (width >= 886px) {
+  .slider__list-element {
+    min-width: 157px;
+  }
   .slider__list-element *:not(:last-child) {
     margin-right: 16px;
   }
@@ -106,6 +120,7 @@
   .slider__list {
     width: 630px;
     margin: 0 24px;
+    gap: 12px;
   }
   .slider__list-element *:not(:last-child) {
     margin-right: 16px;
@@ -120,6 +135,7 @@
   .slider__list {
     width: 464px;
     margin: 0 16px;
+    gap: 8px;
   }
 }
 @media (width <= 375px) {
@@ -138,6 +154,7 @@
   height: var(--slider-heigh);
   text-wrap: nowrap;
   white-space: nowrap;
+  line-height: 20px;
 }
 @media (width <= 886px) {
   .slider__list-element *:not(:last-child) {
@@ -147,9 +164,9 @@
 @media (width <= 768px) {
   .slider__list-element {
     flex-direction: column;
-    width: 100%;
+    width: fit-content;
     height: 136px;
-    padding: 12px 16px;
+    padding: 16px;
     font-size: var(--font-size-m);
   }
 }
@@ -159,13 +176,12 @@
     margin-right: 0;
   }
 }
-@media (width < 640px) {
+@media (width <= 640px) {
   .slider__list-element {
     flex-direction: row;
     height: 48px;
-    width: 100%;
-    padding: 12px 16px;
-    font-size: var(--font-size-m);
+    min-width: 118px;
+    width: 118px;
   }
   .slider__list-element *:not(:last-child) {
     margin-right: 8px;
@@ -179,9 +195,9 @@
   .slider__list-element {
     flex-direction: column;
     align-items: center;
-    width: 98px;
+    min-width: 55px;
     height: 104px;
-    padding: 12px;
+    padding: 12px 12px;
     font-size: var(--font-size-m);
     line-height: var(--font-size-m);
   }
