--- a/styles/weatherForecast/weatherForecast.css
+++ b/styles/weatherForecast/weatherForecast.css
@@ -1,15 +1,14 @@
 .weather__forecast {
   display: grid;
   grid-area: sidebar;
-  /* height: 192px; */
 }
-@media (width >= 1024px) {
+@media (width >=1024px) {
   .weather__forecast {
     grid-template-rows: 32px 64px;
     gap: 32px;
   }
 }
-@media (width <= 1023px) {
+@media (width < 1024px) {
   .weather__forecast {
     grid-template-rows: 32px 64px;
     gap: 24px;
@@ -23,7 +22,7 @@
 }
 @media (width <= 640px) {
   .weather__forecast {
-    grid-template-rows: 22px 46px;
+    grid-template-rows: 22px 48px;
     gap: 16px;
   }
 }
@@ -40,7 +39,7 @@
   font-weight: 700;
   align-items: center;
 }
-@media (width <= 1023px) {
+@media (width < 1024px) {
   .weather__forecast-header {
     height: 32px;
   }
@@ -58,7 +57,6 @@
   font-size: var(--font-size-m);
   color: var(--button-color);
   cursor: pointer;
-
   transition: 0.3s ease, color 0.3s ease;
   text-decoration-line: underline;
   text-decoration-style: solid;
@@ -71,7 +69,7 @@
     margin-top: 8px;
   }
 }
-@media (width <= 1023px) {
+@media (width < 1024px) {
   .weather__forecast-header-button {
     margin-top: 8px;
   }
